crates/neon-sys/src/neon.h

  typedef void(*NeonSys_RootScopeCallback)(void *, void *, void *);
  void NeonSys_Class_ForConstructor(Nan::FunctionCallbackInfo<v8::Value> *info, v8::Local<v8::FunctionTemplate> *out);
  void NeonSys_Class_ForMethod(Nan::FunctionCallbackInfo<v8::Value> *info, v8::Local<v8::FunctionTemplate> *out);
  bool NeonSys_Class_Create(v8::Local<v8::FunctionTemplate> *out, v8::Isolate *isolate, v8::FunctionCallback callback, void *construct_kernel);
  void *NeonSys_Class_GetConstructorKernel(v8::Local<v8::External> wrapper);
  void NeonSys_Class_ExecConstructorKernel(void *closure, NeonSys_RootScopeCallback callback, Nan::FunctionCallbackInfo<v8::Value> *info, void *scope);
  void NeonSys_Class_Constructor(v8::Local<v8::Function> *out, v8::Local<v8::FunctionTemplate> ft);
  bool NeonSys_Class_Check(v8::Local<v8::FunctionTemplate> ft, v8::Local<v8::Value> v);
  void *NeonSys_Class_GetInstanceInternals(v8::Local<v8::Object> obj);